- fixed more tagging stuff  - post edit form tag buttons work again  - truncate deprecation fix  - reloads classes in dev mode again  - wymeditor fix for a warning, makes no functional difference
git-svn-id: http://shrub.ca:8080/svn/swc@117 a73b2e98-c212-4573-bb7c-f9b89b9be6a6

--- a/weblog/app/views/admin/posts/_post_form.rhtml
+++ b/weblog/app/views/admin/posts/_post_form.rhtml
@@ -21,7 +21,7 @@
   <tr>
     <td><label for="tag_input">Tags</label></td>
     <td>
-      <%= text_field_tag 'tag_input', @post.tag_names.join(' '), :size => '58', :class => 'normal_i_width', :id => 'tag_input', :onkeyup => 'highlight_tags(this)' %>
+      <%= text_field_tag 'tag_input', @post.tag_list, :size => '58', :class => 'normal_i_width', :id => 'tag_input', :onkeyup => 'highlight_tags(this)' %>
       <br/>
       <span class="small gray">Enter tags separated by a space or click existing tags below.</span>
     </td>
