--- a/weblog/app/views/admin/posts/post_edit.rhtml
+++ b/weblog/app/views/admin/posts/post_edit.rhtml
@@ -8,7 +8,7 @@
 <table class="super" cellspacing="0" cellpadding="0">
   <tr>
     <td class="super_left" valign="top" class="no_pad">
-      <% form_for :post, :url => "/admin/posts/update/#{@post.id.to_s}", :html => { :multipart => true } do |f| %>
+      <% form_for :post, :url => "/admin/posts/update/#{@post.id.to_s}", :html => { :multipart => true, :id => 'post_form' } do |f| %>
         <%= render :partial => 'admin/posts/post_form', :locals => { :f => f } %>
         <div class="submit_area">
           <%= submit_tag 'Update this post', :class => 'submit wymupdate' %> or <%= link_to 'cancel and return to post list', '/admin/posts' %>
