--- a/weblog/app/views/admin/posts/post_list.rhtml
+++ b/weblog/app/views/admin/posts/post_list.rhtml
@@ -23,8 +23,8 @@
   <% @posts.each do |post| %>
     <tr class="<%= 'futurepost' if post.created_at > Time.sl_local %><%= 'inactive' if !post.is_active %><%= (c%2 == 0 ? 'alt_row ' : '') %><%= (f == 1 ? 'first_row' : '') %>">
       <td class="first_col"><%= post.created_at.strftime('%d %b, %Y') %></td>
-      <td><%= link_to (post.title == '' ? '[Untitled]' : truncate(post.title, (comments_on == 'yes' ? 30 : 40))), '/admin/posts/edit/' + post.id.to_s %></td>
-      <td><% tmpc = truncate(Post.strip_html(post.body), (comments_on == 'yes' ? 55 : 65)) %><%= (tmpc != '' ? tmpc : '&nbsp;') %></td>
+      <td><%= link_to (post.title == '' ? '[Untitled]' : truncate(post.title, :length => (comments_on == 'yes' ? 30 : 40))), '/admin/posts/edit/' + post.id.to_s %></td>
+      <td><% tmpc = truncate(Post.strip_html(post.body), :length => (comments_on == 'yes' ? 55 : 65)) %><%= (tmpc != '' ? tmpc : '&nbsp;') %></td>
       <% if comments_on == 'yes' %>
         <td class="small_col"><%= post.comments.length > 0  ? link_to( "#{post.comments.length} comments", '/admin/comments/bypost/' + post.id.to_s ) : "none" %></td>
       <% end %>
