--- a/weblog/app/views/includes/_tags.html.erb
+++ b/weblog/app/views/includes/_tags.html.erb
@@ -1,8 +1,8 @@
 <div>
   <ul class="inline">
     <!-- TODO RESTORE THIS! -->
-    <%# tags.sort.each do |tag| %>
-      <li><%#= link_to tag[0], "/#{Site.archive_token}/tags/#{tag[0]}" , :title => "View posts tagged with &quot;#{tag[0]}&quot;" %></li>
-    <%# end %>
+    <% tags.sort.each do |tag| %>
+      <li><%= link_to tag, "/#{Site.archive_token}/tags/#{tag}" , :title => "View posts tagged with &quot;#{tag}&quot;" %></li>
+    <% end %>
   </ul>
 </div>
