- Fixed a whole bunch of problems with the new tagging system in the admin section, that made it broken.  - Got all of the unit tests working again. rake test. There was plenty that was broken, I think it didn't pass even before I started making changes originally.  - fixed deprecations as well  - added some more convenient links in the admin section  - fixed a problem with the taggings table not having an id column! (have to db:migrate down and back up if you used it previously)
git-svn-id: http://shrub.ca:8080/svn/swc@120 a73b2e98-c212-4573-bb7c-f9b89b9be6a6

--- a/weblog/app/views/includes/_tags.html.erb
+++ b/weblog/app/views/includes/_tags.html.erb
@@ -1,7 +1,6 @@
 <div>
   <ul class="inline">
-    <!-- TODO RESTORE THIS! -->
-    <% tags.sort.each do |tag| %>
+    <% mytags.sort.each do |tag| %>
       <li><%= link_to tag, "/#{Site.archive_token}/tags/#{tag}" , :title => "View posts tagged with &quot;#{tag}&quot;" %></li>
     <% end %>
   </ul>
