--- a/weblog/app/views/admin/tags/tag_list.rhtml
+++ b/weblog/app/views/admin/tags/tag_list.rhtml
@@ -19,7 +19,7 @@
   <% for tag in @tags -%>
     <tr class="<% if tag.post_count.to_i < 1 %>inactive <% end %><%= (c%2 == 0 ? 'alt_row ' : '') %><%= (f == 1 ? 'first_row' : '') %>">
       <td class="first_col wider"><%= link_to tag.name, '/admin/tags/edit/' + tag.id.to_s %></td>
-      <td class="small_col"><%= tag.post_count %></td>
+      <td class="small_col"><%= link_to tag.post_count, '/admin/tags/show/' + tag.id.to_s %></td>
       <td class="del_col"><%= link_to 'X', '/admin/tags/destroy/' + tag.id.to_s, :confirm => "You are about to delete this tag. This is permanent.\n\nAre you ABSOLUTELY sure?" %></td>
     </tr>
     <% c = (c == 1 ? c+1 : c = 1) -%>
