--- a/weblog/app/views/admin/posts/post_new.rhtml
+++ b/weblog/app/views/admin/posts/post_new.rhtml
@@ -6,7 +6,7 @@
 <table class="super" cellspacing="0" cellpadding="0">
   <tr>
     <td class="super_left" valign="top" class="no_pad">
-      <% form_for :post, :url => '/admin/posts/create', :html => { :multipart => true } do |f| %>
+      <% form_for :post, :url => '/admin/posts/create', :html => { :multipart => true, :id => 'post_form' } do |f| %>
         <%= render :partial => 'admin/posts/post_form', :locals => { :f => f } %>
         <div class="submit_area">
           <%= submit_tag 'Create new post', :class => 'submit wymupdate' %> or <%= link_to 'cancel and return to post list', '/admin/posts' %>
