Added the ability to view the current attachment's name, and to delete the current attachment if there is one.
git-svn-id: http://shrub.ca:8080/svn/swc@125 a73b2e98-c212-4573-bb7c-f9b89b9be6a6

--- a/weblog/app/views/admin/posts/_post_form.rhtml
+++ b/weblog/app/views/admin/posts/_post_form.rhtml
@@ -37,11 +37,23 @@
   </tr>
   <tr class="breaker">
     <td colspan="2">
-      <a class="section_toggler" href="javascript://" onclick="Element.toggle('attach1');Element.toggle('attach_i1');Element.toggle('attach_i2');">Attachment&nbsp;&nbsp;<img id="attach_i1" src="/images/admin/arrow_right.gif" border="0" alt="" /><img id="attach_i2" src="/images/admin/arrow_down.gif" border="0" alt="" style="display: none;" /></a>
+      <a class="section_toggler" href="javascript://" onclick="Element.toggle('attach1');Element.toggle('attach2');Element.toggle('attach3');Element.toggle('attach_i1');Element.toggle('attach_i2');">Attachment&nbsp;&nbsp;<img id="attach_i1" src="/images/admin/arrow_right.gif" border="0" alt="" /><img id="attach_i2" src="/images/admin/arrow_down.gif" border="0" alt="" style="display: none;" /></a>
     </td>
   </tr>
-  <tr id="attach1"<% if get_pref('ALL_TAGS_BY_DEFAULT') != 'yes' %> style="display: none;"<% end %>>
-    <td><%= f.label 'Attachment' %><!--<label for="attachment">Attachment</label>--></td>
+  <tr id="attach1" style="display: none;">
+    <td><%= f.label 'Current attachment' %></td>
+    <td valign="top" class="wrap">
+      <%= if @post.attachment.file? then "#{@post.attachment}" else "none" end %>
+    </td>
+  </tr>
+  <tr id="attach2" style="display: none;">
+    <td><%= f.label 'Delete attachment' %></td>
+    <td valign="top" class="wrap">
+      <%= check_box_tag( 'delete_attachment', 'yes' ) if @post.attachment.file? %>
+    </td>
+  </tr>
+  <tr id="attach3" style="display: none;">
+    <td><%= f.label 'Attach file' %></td>
     <td valign="top" class="wrap">
       <%= f.file_field :attachment %>
     </td>
