--- a/app/views/posts/_item_detailed.rhtml
+++ b/app/views/posts/_item_detailed.rhtml
@@ -17,8 +17,7 @@
 </div>
 
 <%# ##################################################### -%>
-<%# This is the logic/code for comments... you can copy   -%>
-<%# this and use it in your themes to support comments    -%>
+<%# This is the logic/code for comments...                -%>
 <%# ##################################################### -%>
 <% if Site.comment_system_on and post.comment_status != 0 -%>
 <!-- comments for this post -->
