--- a/app/views/admin/pages/page_list.rhtml
+++ b/app/views/admin/pages/page_list.rhtml
@@ -32,15 +32,15 @@
   <% unless @pages.length > 0 -%>
   <tr class="first_row"><td class="first_col" colspan="5"><span class="gray">There are no pages at this time.</span></td></tr>
   <% end -%>
-  <% if @page_pages %>
+  <% if @pager %>
   <tr class="header">
     <th colspan="5">
       <div class="pagination">
         <div class="prev">
-          <%= link_to '&laquo; Previous page', { :sort => params[:sort], :page => @page_pages.current.previous } if @page_pages.current.previous %>
+          <%= link_to '&laquo; Previous page', { :sort => params[:sort], :page => @pager.current.previous } if @pager.current.previous %>
         &nbsp;</div>
         <div class="next">&nbsp;
-          <%= link_to 'Next page &raquo;', { :sort => params[:sort], :page => @page_pages.current.next } if @page_pages.current.next %>
+          <%= link_to 'Next page &raquo;', { :sort => params[:sort], :page => @pager.current.next } if @pager.current.next %>
         </div>
       </div>
     </th>
