--- a/app/views/pages/show.rhtml
+++ b/app/views/pages/show.rhtml
@@ -1,3 +1,8 @@
 <div class="page_content">
+  <div class="item_details">
+    <h3><%= @page.title %></h3>
+  </div>
+  <div class="item_content">
     <%= @page.body %>
+  </div>
 </div>
