Eliminated unused javascript.js files & includes, new image header.

--- a/app/views/layouts/site.rhtml
+++ b/app/views/layouts/site.rhtml
@@ -11,8 +11,7 @@
     <%= auto_discovery_link_tag :rss, Site.comments_rss_url, :title => 'Simon Says - Comments' %>
     <link type="text/css" title="Stylesheet" rel="Stylesheet" media="screen" href="/stylesheets/inside.css"/>
     <%= javascript_include_tag 'site' %>
-    <%= javascript_include_tag 'prototype' %> <%= javascript_include_tag 'effects' %> <%= javascript_include_tag 'lightbox' %>
-    <%= javascript_include_tag 'rollover' %> <%= javascript_include_tag 'accordion' %>
+    <%= javascript_include_tag 'prototype' %> <%= javascript_include_tag 'effects' %> <%= javascript_include_tag 'rollover' %>
   </head>
   <body>
     <%#= render :partial => 'includes/browser_check' %>
