--- a/app/views/post/_item.html.erb
+++ b/app/views/post/_item.html.erb
@@ -1,11 +1,11 @@
-<div class="item" id='<%= "item_#{post.id}" %>'>
+<div class="item" id="item_<%= post.id %>">
   <div class="item_details">
     <h3><%= post.title %></h3>
-    <h4>Posted <%= Site.author_info(post) %>
-      on <%= Site.date_time_linked(post) %></h4>
+    <h4>Posted <%= Site.author_info(post) %> on <%= Site.date_time_linked(post) %></h4>
     <h4>Categories: <%= Site.tag_info(post) %></h4>
   </div>
   <div class="item_content">
+    <%= image_tag( post.attachment.url ) if post.attachment.file? %>
     <%= auto_link(post.body) %>
     <%= Site.extended_content_link(post) %>
   </div>
