--- a/app/views/post/_item_detailed.html.erb
+++ b/app/views/post/_item_detailed.html.erb
@@ -1,108 +1,21 @@
-<!-- this is post id <%= post.id %> -->
-
-<div class="item_perma">
+<div class="item_perma" id="item_<%= post.id %>">
   <div class="item_details">
-    <h3><%= post.title %></h3>
+    <h3><%=h post.title %></h3>
     <h4>Posted <%= Site.author_info(post) %> on <%= Site.date_time_linked(post) %></h4>
     <h4>Categories: <%= Site.tag_info(post) %></h4>
   </div>
   <div class="item_content">
+    <%= image_tag( post.attachment.url ) if post.attachment.file? %>
     <%= auto_link(post.body) %>
     <%= auto_link(Site.extended_content_block(post)) %>
-    <%= image_tag( post.attachment.url ) if post.attachment.file? %>
   </div>
   <div class="item_meta">
     <%= render :partial => 'includes/previous_next', :locals => { :post => post } %>
+    <h3>Related Posts</h3>
+    <ul>
+      <% post.related.each do |related_post| %>
+        <li><%= link_to related_post.title, Post.permalink(related_post) %></li>
+      <% end %>
+    </ul>
   </div>
 </div>
-
-<%# ##################################################### -%>
-<%# This is the logic/code for comments...                -%>
-<%# ##################################################### -%>
-<% if Site.comment_system_on and post.comment_status != 0 -%>
-<!-- comments for this post -->
-<div id="comments">
-    <h3>Comments</h3>
-    <h4><%= Site.comment_count_description(post) %><%= Site.add_comment_link(post) %></h4>
-    
-    <% if flash[:notice] -%>
-    <div class="approval_required"><%= flash[:notice] %></div>
-    <% end -%>
-    
-    <% show_gravatars = Site.gravatars_on %>
-    <% for comment in post.comments -%>
-    <div class="comment_content" id="c<%= comment.id.to_s %>">
-        <% if show_gravatars -%>
-            <div class="gravatar"><img src="<%= get_gravatar_url(comment.email) %>"/></div>
-        <% end -%>
-        <div class="comment_author"><%= Site.comment_author(comment) %></div>
-        <div class="comment_details">posted on <%= Site.date_time_comment_linked(comment, post) %></div>
-        <div class="comment_body"><%= comment.body %></div>
-    </div>
-    <% end -%>
-    
-    <% if Site.accepting_comments(post) -%>
-        <h3 id="post">Post a comment</h3>
-        <h4>Required fields in <b>bold</b>.</h4>
-    
-        <% form_tag('/comment/add', :id => 'post_form') do %>
-        <%= hidden_field_tag 'do', '1' %>
-        <%# ###################################################### -%>
-        <%# This is used to check if commenter is human by seeing  -%>
-        <%# if they actually input text into any of the boxes and  -%>
-        <%# requires the additional :onclick and :onkeypress below -%>
-        <%# ###################################################### -%>
-        <%= hidden_field_tag 'human_check', '0' %>
-        <%= hidden_field_tag 'return_url', Post.permalink(post) %>
-        <%= hidden_field_tag 'link', post.permalink %>
-        <%= hidden_field 'comment', 'post_id', :value => post.id.to_s %>
-        <%  temp_repair = error_messages_for('comment') || '' %>
-        <%= temp_repair.gsub('Body raw', 'Body') %>
-   
-        <div id="comment_form">
-            
-            <table id="comment_form" cellpadding="0" cellspacing="0">
-                <tr>
-                    <td class="labels"><label for="comment_name">Name:</label></td>
-                    <td class="fields"><%= text_field 'comment', 'name' %></td>
-                </tr>
-                <tr>
-                    <td class="labels"><label for="comment_email"><b>Email:</b></label></td>
-                    <td class="fields"><%= text_field 'comment', 'email' %></td>
-                </tr>
-                <tr>
-                    <td class="labels"><label for="comment_url">URL:</label></td>
-                    <td class="fields"><%= text_field 'comment', 'url' %></td>
-                </tr>
-                <% if Site.allow_comment_subjects %>
-                <tr>
-                    <td class="labels"><label for="subject">Subject:</label></td>
-                    <td class="fields"><%= text_field 'comment', 'subject' %></td>
-                </tr>
-                <% end %>
-                <tr>
-                    <td class="labels"><label for="tag_name"><b>Comment:</b></label></td>
-                    <td class="fields"><%= text_area 'comment', 'body_raw', :rows => 20, :cols => 45, :wrap => 'virtual', :onkeypress => "this.form.elements['human_check'].value = '8'" %></td>
-                </tr>
-                <tr>
-                    <td class="labels">&nbsp;</td>
-                    <td class="fields">
-                        <div class="submit_area">
-                            <%= submit_tag 'Submit comment', :class => 'submit', :onclick => "this.form.elements['human_check'].value = '8'" %>
-                        </div>
-                    </td>
-                </tr>
-            </table>
-            
-        </div>
-    
-        <% end -%>
-    <% end -%>
-</div>
-<!-- end comments -->
-<% end -%>
-<%# ##################################################### -%>
-<%# This is the end of the comment logic block            -%>
-<%# ##################################################### -%>
-
-<!-- end post id <%= post.id %> -->
