--- a/public/stylesheets/shared.css
+++ b/public/stylesheets/shared.css
@@ -35,6 +35,8 @@ body {
 	padding: 0;
 }
 
+pre { font-size: 13px; }
+
 img, img a { border: none; background: none; }
 
 p { margin: 0; padding: 0; margin-top: 7px; margin-bottom: 7px; }
